Progress on Navigator browser

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -2,11 +2,21 @@
 # Default
 #
 
+Navigator.buttonHome.toolTipText=Go to home folder
+Navigator.buttonBack.toolTipText=Go Back
+Navigator.buttonForward.toolTipText=Go Forward
+Navigator.buttonBrowse.toolTipText=Browse for a folder location
 Navigator.buttonPlay.text=Play
+Navigator.buttonPlay.toolTipText=Play the file
 Navigator.buttonCopy.text=Copy
+Navigator.buttonCopy.toolTipText=Copy selected items
 Navigator.buttonMove.text=Move
+Navigator.buttonMove.toolTipText=Move selected items
 Navigator.buttonDelete.text=Delete
+Navigator.buttonDelete.toolTipText=Delete selected items
 Navigator.buttonRename.text=Rename
+Navigator.buttonRename.toolTipText=Rename selected items
+Navigator.buttonToggle.toolTipText=Toggle text or breadcrumb view
 Navigator.labelStatusLeft.text=Status
 Navigator.labelStatusRight.text=ELS 4.0.0
 Navigator.labelStatusMiddle.text=Messages
@@ -23,13 +33,17 @@ Navigator.menuHelp.text=Help
 Navigator.menuRunSubMenu.mnemonic=R
 Navigator.menuRunSubMenu.text=Run
 Navigator.menuFile.mnemonic=F
-Navigator.menuItem1.text=Junk Remover
+Navigator.menuFile.text=File
+Navigator.menuItemJunk.mnemonic_2=R
+Navigator.menuItemJunk.text=Remove Junk
+Navigator.menuItemDuplicates.mnemonic=F
+Navigator.menuItemDuplicates.text=Find Duplicates
 Navigator.menuItemCopy.mnemonic=C
 Navigator.menuItemCopy.text=Copy
 Navigator.menuItemShowAllBookmarks.mnemonic=S
 Navigator.menuItemShowAllBookmarks.text=Show All
-Navigator.menuItemUuidGenerator.mnemonic=U
-Navigator.menuItemUuidGenerator.text=UUID Generator
+Navigator.menuItemUuidGenerator.mnemonic_2=G
+Navigator.menuItemUuidGenerator.text=Generate UUID
 Navigator.menuItemExternalTools.mnemonic=E
 Navigator.menuItemExternalTools.text=External Tools
 Navigator.menuItemPreferences.mnemonic=R
@@ -65,13 +79,14 @@ Navigator.menuItem8.text=Delete
 Navigator.menuItemAddBookmark.mnemonic=A
 Navigator.menuItemAddBookmark.text=Add
 Navigator.menuItemFileQuit.mnemonic=Q
-Navigator.panelSystemLeft.tab.title=System
-Navigator.panelSystemRight.tab.title=System
-Navigator.panelCollectionLeft.tab.title=Collection
-Navigator.panelCollectionRight.tab.title=Collection
+Navigator.menuItemFileQuit.text=Quit
+Navigator.panelSystemOne.tab.title=System
+Navigator.panelSystemTwo.tab.title=System
+Navigator.panelCollectionOne.tab.title=Collection
+Navigator.panelCollectionTwo.tab.title=Collection
 Navigator.panelProfiles.tab.title=Profiles
 Navigator.panelKeys.tab.title=Keys
 Navigator.scrollPaneContent.tab.title=Content
 Navigator.scrollPaneFind.tab.title=Find
 Navigator.splitPaneBackup.tab.title=Back-Up
-Navigator.splitPaneNavigator.tab.title=Navigator
+Navigator.splitPaneBrowser.tab.title=Navigator
