Working on the dynamic trees

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -17,8 +17,8 @@ Navigator.buttonDelete.toolTipText=Delete selected items
 Navigator.buttonRename.text=Rename
 Navigator.buttonRename.toolTipText=Rename selected items
 Navigator.buttonToggle.toolTipText=Toggle text or breadcrumb view
-Navigator.labelStatusLeft.text=Status
-Navigator.labelStatusRight.text=ELS 4.0.0
+Navigator.labelStatusLeft.text=Status Left
+Navigator.labelStatusRight.text=Status Right
 Navigator.labelStatusMiddle.text=Messages
 Navigator.menuEdit.mnemonic=E
 Navigator.menuEdit.text=Edit
@@ -34,8 +34,10 @@ Navigator.menuRunSubMenu.mnemonic=R
 Navigator.menuRunSubMenu.text=Run
 Navigator.menuFile.mnemonic=F
 Navigator.menuFile.text=File
-Navigator.menuItemJunk.mnemonic_2=R
-Navigator.menuItemJunk.text=Remove Junk
+Navigator.menuItemTouch.mnemonic=T
+Navigator.menuItemTouch.text=Touch Date/Time
+Navigator.menuItemJunk.mnemonic=J
+Navigator.menuItemJunk.text=Junk Removal
 Navigator.menuItemDuplicates.mnemonic=F
 Navigator.menuItemDuplicates.text=Find Duplicates
 Navigator.menuItemCopy.mnemonic=C
