Progress on remote functionality

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -90,4 +90,4 @@ Navigator.panelProfiles.tab.title=Profiles
 Navigator.panelKeys.tab.title=Keys
 Navigator.scrollPaneContent.tab.title=Content
 Navigator.scrollPaneFind.tab.title=Find
-Navigator.splitPaneBackup.tab.title=Back-Up
+Navigator.splitPaneBackup.tab.title=BackUp
