Basic publisher & subscriber navigation for local & remote

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -34,6 +34,12 @@ Navigator.menuRunSubMenu.mnemonic=R
 Navigator.menuRunSubMenu.text=Run
 Navigator.menuFile.mnemonic=F
 Navigator.menuFile.text=File
+Navigator.menuItemToggleBottom.mnemonic=B
+Navigator.menuItemToggleBottom.text=Show/Hide Bottom
+Navigator.menuItemTogglePublisher.mnemonic=L
+Navigator.menuItemTogglePublisher.text=Show/Hide Publisher
+Navigator.menuItemToggleSubscriber.mnemonic=R
+Navigator.menuItemToggleSubscriber.text=Show/Hide Subscriber
 Navigator.menuItemTouch.mnemonic=T
 Navigator.menuItemTouch.text=Touch Date/Time
 Navigator.menuItemJunk.mnemonic=J
@@ -54,12 +60,12 @@ Navigator.menuItemMaximize.mnemonic=X
 Navigator.menuItemMaximize.text=Maximize
 Navigator.menuItemMinimize.mnemonic=M
 Navigator.menuItemMinimize.text=Minimize
-Navigator.menuItemFullScreen.mnemonic=F
-Navigator.menuItemFullScreen.text=Full Screen
+Navigator.menuItemRestore.mnemonic=E
+Navigator.menuItemRestore.text=Restore
 Navigator.menuItemSplitHorizontal.mnemonic=H
-Navigator.menuItemSplitHorizontal.text=Split Horizontal
+Navigator.menuItemSplitHorizontal.text=Split Horizontally
 Navigator.menuItemSplitVertical.mnemonic=V
-Navigator.menuItemSplitVertical.text=Split Vertical
+Navigator.menuItemSplitVertical.text=Split Vertically
 Navigator.menuItemCut.mnemonic=U
 Navigator.menuItemCut.text=Cut
 Navigator.menuItemDocumentation.mnemonic=D
@@ -82,8 +88,8 @@ Navigator.menuItemAddBookmark.mnemonic=A
 Navigator.menuItemAddBookmark.text=Add
 Navigator.menuItemFileQuit.mnemonic=Q
 Navigator.menuItemFileQuit.text=Quit
-Navigator.panelSystemOne.tab.title=System
-Navigator.panelSystemTwo.tab.title=System
+Navigator.panelSystemOne.tab.title=Publisher
+Navigator.panelSystemTwo.tab.title=Subscriber
 Navigator.panelCollectionOne.tab.title=Collection
 Navigator.panelCollectionTwo.tab.title=Collection
 Navigator.panelProfiles.tab.title=Profiles
