GUI clean-up and menu work

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -2,10 +2,10 @@
 # Default
 #
 
-Navigator.buttonHome.toolTipText=Go to home folder
-Navigator.buttonBack.toolTipText=Go Back
-Navigator.buttonForward.toolTipText=Go Forward
-Navigator.buttonBrowse.toolTipText=Browse for a folder location
+Navigator.buttonBack.mnemonic=<
+Navigator.buttonBack.toolTipText=Back
+Navigator.buttonForward.mnemonic=>
+Navigator.buttonForward.toolTipText=Forward
 Navigator.buttonPlay.text=Play
 Navigator.buttonPlay.toolTipText=Play the file
 Navigator.buttonCopy.text=Copy
@@ -16,7 +16,6 @@ Navigator.buttonDelete.text=Delete
 Navigator.buttonDelete.toolTipText=Delete selected items
 Navigator.buttonRename.text=Rename
 Navigator.buttonRename.toolTipText=Rename selected items
-Navigator.buttonToggle.toolTipText=Toggle text or breadcrumb view
 Navigator.labelStatusLeft.text=Status Left
 Navigator.labelStatusRight.text=Status Right
 Navigator.labelStatusMiddle.text=Messages
@@ -34,12 +33,8 @@ Navigator.menuRunSubMenu.mnemonic=R
 Navigator.menuRunSubMenu.text=Run
 Navigator.menuFile.mnemonic=F
 Navigator.menuFile.text=File
-Navigator.menuItemToggleBottom.mnemonic=B
-Navigator.menuItemToggleBottom.text=Show/Hide Bottom
-Navigator.menuItemTogglePublisher.mnemonic=L
-Navigator.menuItemTogglePublisher.text=Show/Hide Publisher
-Navigator.menuItemToggleSubscriber.mnemonic=R
-Navigator.menuItemToggleSubscriber.text=Show/Hide Subscriber
+Navigator.menuItemGitHubProject.mnemonic=G
+Navigator.menuItemGitHubProject.text=GitHub Project
 Navigator.menuItemTouch.mnemonic=T
 Navigator.menuItemTouch.text=Touch Date/Time
 Navigator.menuItemJunk.mnemonic=J
