Added beginning of log and properties tabs output; DnD and CCP setup working; heavy lifting next

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -18,7 +18,6 @@ Navigator.buttonRename.text=Rename
 Navigator.buttonRename.toolTipText=Rename selected items
 Navigator.labelStatusLeft.text=Status Left
 Navigator.labelStatusRight.text=Status Right
-Navigator.labelStatusMiddle.text=Messages
 Navigator.menuEdit.mnemonic=E
 Navigator.menuEdit.text=Edit
 Navigator.menuBookmarks.mnemonic=B
@@ -89,6 +88,6 @@ Navigator.panelCollectionOne.tab.title=Collection
 Navigator.panelCollectionTwo.tab.title=Collection
 Navigator.panelProfiles.tab.title=Profiles
 Navigator.panelKeys.tab.title=Keys
-Navigator.scrollPaneContent.tab.title=Content
-Navigator.scrollPaneFind.tab.title=Find
+Navigator.scrollPaneContent.tab.title=Properties
+Navigator.scrollPaneFind.tab.title=Log
 Navigator.splitPaneBackup.tab.title=BackUp
