Added DnD, CCP to tree elements; started on back/forward navigation

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -41,7 +41,7 @@ Navigator.menuItemJunk.text=Junk Removal
 Navigator.menuItemDuplicates.mnemonic=F
 Navigator.menuItemDuplicates.text=Find Duplicates
 Navigator.menuItemCopy.mnemonic=C
-Navigator.menuItemCopy.text=Copy
+Navigator.menuItemCopy.text=Copy (Ctrl-C)
 Navigator.menuItemShowAllBookmarks.mnemonic=S
 Navigator.menuItemShowAllBookmarks.text=Show All
 Navigator.menuItemUuidGenerator.mnemonic_2=G
@@ -61,13 +61,13 @@ Navigator.menuItemSplitHorizontal.text=Split Horizontally
 Navigator.menuItemSplitVertical.mnemonic=V
 Navigator.menuItemSplitVertical.text=Split Vertically
 Navigator.menuItemCut.mnemonic=U
-Navigator.menuItemCut.text=Cut
+Navigator.menuItemCut.text=Cut (Ctrl-X)
 Navigator.menuItemDocumentation.mnemonic=D
 Navigator.menuItemDocumentation.text=Documentation
 Navigator.menuItemAbout.mnemonic=A
 Navigator.menuItemAbout.text=About
 Navigator.menuItemPaste.mnemonic=P
-Navigator.menuItemPaste.text=Paste
+Navigator.menuItemPaste.text=Paste (Ctrl-V)
 Navigator.menuItemOpen.mnemonic=O
 Navigator.menuItemOpen.text=Open
 Navigator.menuItemNew.mnemonic=N
@@ -88,6 +88,6 @@ Navigator.panelCollectionOne.tab.title=Collection
 Navigator.panelCollectionTwo.tab.title=Collection
 Navigator.panelProfiles.tab.title=Profiles
 Navigator.panelKeys.tab.title=Keys
-Navigator.scrollPaneContent.tab.title=Properties
-Navigator.scrollPaneFind.tab.title=Log
+Navigator.scrollPaneProperties.tab.title=Properties
+Navigator.scrollPaneLog.tab.title=Log
 Navigator.splitPaneBackup.tab.title=BackUp
