Added --decimal-scale option; added view hidden GUI option for tree and table; transfer work progress

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -6,8 +6,6 @@ Navigator.buttonBack.mnemonic=<
 Navigator.buttonBack.toolTipText=Back
 Navigator.buttonForward.mnemonic=>
 Navigator.buttonForward.toolTipText=Forward
-Navigator.buttonPlay.text=Play
-Navigator.buttonPlay.toolTipText=Play the file
 Navigator.buttonCopy.text=Copy
 Navigator.buttonCopy.toolTipText=Copy selected items
 Navigator.buttonMove.text=Move
@@ -32,6 +30,8 @@ Navigator.menuRunSubMenu.mnemonic=R
 Navigator.menuRunSubMenu.text=Run
 Navigator.menuFile.mnemonic=F
 Navigator.menuFile.text=File
+Navigator.menuItemPlexGenerator.mnemonic_2=E
+Navigator.menuItemPlexGenerator.text=ELS Generator for Plex
 Navigator.menuItemGitHubProject.mnemonic=G
 Navigator.menuItemGitHubProject.text=GitHub Project
 Navigator.menuItemTouch.mnemonic=T
@@ -46,27 +46,27 @@ Navigator.menuItemShowAllBookmarks.mnemonic=S
 Navigator.menuItemShowAllBookmarks.text=Show All
 Navigator.menuItemUuidGenerator.mnemonic_2=G
 Navigator.menuItemUuidGenerator.text=Generate UUID
-Navigator.menuItemExternalTools.mnemonic=E
+Navigator.menuItemExternalTools.mnemonic=X
 Navigator.menuItemExternalTools.text=External Tools
-Navigator.menuItemPreferences.mnemonic=R
+Navigator.menuItemPreferences.mnemonic_2=P
 Navigator.menuItemPreferences.text=Preferences
 Navigator.menuItemMaximize.mnemonic=X
 Navigator.menuItemMaximize.text=Maximize
-Navigator.menuItemMinimize.mnemonic=M
+Navigator.menuItemMinimize.mnemonic_2=N
 Navigator.menuItemMinimize.text=Minimize
-Navigator.menuItemRestore.mnemonic=E
+Navigator.menuItemRestore.mnemonic_2=R
 Navigator.menuItemRestore.text=Restore
 Navigator.menuItemSplitHorizontal.mnemonic=H
-Navigator.menuItemSplitHorizontal.text=Split Horizontally
+Navigator.menuItemSplitHorizontal.text=Split Browser Horizontally
 Navigator.menuItemSplitVertical.mnemonic=V
-Navigator.menuItemSplitVertical.text=Split Vertically
-Navigator.menuItemCut.mnemonic=U
+Navigator.menuItemSplitVertical.text=Split Browser Vertically
+Navigator.menuItemCut.mnemonic_2=X
 Navigator.menuItemCut.text=Cut (Ctrl-X)
 Navigator.menuItemDocumentation.mnemonic=D
 Navigator.menuItemDocumentation.text=Documentation
 Navigator.menuItemAbout.mnemonic=A
 Navigator.menuItemAbout.text=About
-Navigator.menuItemPaste.mnemonic=P
+Navigator.menuItemPaste.mnemonic_2=V
 Navigator.menuItemPaste.text=Paste (Ctrl-V)
 Navigator.menuItemOpen.mnemonic=O
 Navigator.menuItemOpen.text=Open
@@ -76,8 +76,6 @@ Navigator.menuItemSave.mnemonic=S
 Navigator.menuItemSave.text=Save
 Navigator.menuItemSaveAll.mnemonic=A
 Navigator.menuItemSaveAll.text=Save All
-Navigator.menuItem8.mnemonic=D
-Navigator.menuItem8.text=Delete
 Navigator.menuItemAddBookmark.mnemonic=A
 Navigator.menuItemAddBookmark.text=Add
 Navigator.menuItemFileQuit.mnemonic=Q
