Reworked Show Hidden items and added menu option and Ctrl-H handling; added refreshTree() method

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -2,10 +2,8 @@
 # Default
 #
 
-Navigator.buttonBack.mnemonic=<
-Navigator.buttonBack.toolTipText=Back
-Navigator.buttonForward.mnemonic=>
-Navigator.buttonForward.toolTipText=Forward
+Navigator.buttonBack.toolTipText=Back (Alt-Left)
+Navigator.buttonForward.toolTipText=Forward (Alt-Right)
 Navigator.buttonCopy.text=Copy
 Navigator.buttonCopy.toolTipText=Copy selected items
 Navigator.buttonMove.text=Move
@@ -16,6 +14,8 @@ Navigator.buttonRename.text=Rename
 Navigator.buttonRename.toolTipText=Rename selected items
 Navigator.labelStatusLeft.text=Status Left
 Navigator.labelStatusRight.text=Status Right
+Navigator.menuView.mnemonic=V
+Navigator.menuView.text=View
 Navigator.menuEdit.mnemonic=E
 Navigator.menuEdit.text=Edit
 Navigator.menuBookmarks.mnemonic=B
@@ -30,6 +30,10 @@ Navigator.menuRunSubMenu.mnemonic=R
 Navigator.menuRunSubMenu.text=Run
 Navigator.menuFile.mnemonic=F
 Navigator.menuFile.text=File
+Navigator.menuItemSaveLayout.mnemonic=S
+Navigator.menuItemSaveLayout.text=Save Layout
+Navigator.menuItemShowHidden.mnemonic=H
+Navigator.menuItemShowHidden.text=Show Hidden
 Navigator.menuItemPlexGenerator.mnemonic_2=E
 Navigator.menuItemPlexGenerator.text=ELS Generator for Plex
 Navigator.menuItemGitHubProject.mnemonic=G
