Copy/cut/paste menu options; special tab key handling; support for mouse forward/back buttons; alt-key accelerators on all primary components

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -3,15 +3,16 @@
 #
 
 Navigator.buttonBack.toolTipText=Back (Alt-Left)
-Navigator.buttonForward.toolTipText=Forward (Alt-Right)
-Navigator.buttonCopy.text=Copy
-Navigator.buttonCopy.toolTipText=Copy selected items
+Navigator.buttonDelete.text=Delete
+Navigator.buttonRename.text=Rename
 Navigator.buttonMove.text=Move
 Navigator.buttonMove.toolTipText=Move selected items
-Navigator.buttonDelete.text=Delete
-Navigator.buttonDelete.toolTipText=Delete selected items
-Navigator.buttonRename.text=Rename
 Navigator.buttonRename.toolTipText=Rename selected items
+Navigator.buttonDelete.toolTipText=Delete selected items
+Navigator.buttonCopy.text=Copy
+Navigator.buttonCreate.text=Create
+Navigator.buttonCopy.toolTipText=Copy selected items
+Navigator.buttonForward.toolTipText=Forward (Alt-Right)
 Navigator.labelStatusLeft.text=Status Left
 Navigator.labelStatusRight.text=Status Right
 Navigator.menuView.mnemonic=V
@@ -30,12 +31,15 @@ Navigator.menuRunSubMenu.mnemonic=R
 Navigator.menuRunSubMenu.text=Run
 Navigator.menuFile.mnemonic=F
 Navigator.menuFile.text=File
-Navigator.menuItemSaveLayout.mnemonic=S
 Navigator.menuItemSaveLayout.text=Save Layout
+Navigator.menuItemFind.mnemonic=F
+Navigator.menuItemFind.text=Find
+Navigator.menuItemRefresh.mnemonic=R
+Navigator.menuItemRefresh.text=Refresh
 Navigator.menuItemShowHidden.mnemonic=H
-Navigator.menuItemShowHidden.text=Show Hidden
-Navigator.menuItemPlexGenerator.mnemonic_2=E
-Navigator.menuItemPlexGenerator.text=ELS Generator for Plex
+Navigator.menuItemShowHidden.text=Toggle Show Hidden
+Navigator.menuItemPlexGenerator.mnemonic=P
+Navigator.menuItemPlexGenerator.text=Plex Profile Generator
 Navigator.menuItemGitHubProject.mnemonic=G
 Navigator.menuItemGitHubProject.text=GitHub Project
 Navigator.menuItemTouch.mnemonic=T
@@ -45,12 +49,12 @@ Navigator.menuItemJunk.text=Junk Removal
 Navigator.menuItemDuplicates.mnemonic=F
 Navigator.menuItemDuplicates.text=Find Duplicates
 Navigator.menuItemCopy.mnemonic=C
-Navigator.menuItemCopy.text=Copy (Ctrl-C)
+Navigator.menuItemCopy.text=Copy
 Navigator.menuItemShowAllBookmarks.mnemonic=S
 Navigator.menuItemShowAllBookmarks.text=Show All
 Navigator.menuItemUuidGenerator.mnemonic_2=G
 Navigator.menuItemUuidGenerator.text=Generate UUID
-Navigator.menuItemExternalTools.mnemonic=X
+Navigator.menuItemExternalTools.mnemonic_2=E
 Navigator.menuItemExternalTools.text=External Tools
 Navigator.menuItemPreferences.mnemonic_2=P
 Navigator.menuItemPreferences.text=Preferences
@@ -65,13 +69,13 @@ Navigator.menuItemSplitHorizontal.text=Split Browser Horizontally
 Navigator.menuItemSplitVertical.mnemonic=V
 Navigator.menuItemSplitVertical.text=Split Browser Vertically
 Navigator.menuItemCut.mnemonic_2=X
-Navigator.menuItemCut.text=Cut (Ctrl-X)
+Navigator.menuItemCut.text=Cut
 Navigator.menuItemDocumentation.mnemonic=D
 Navigator.menuItemDocumentation.text=Documentation
 Navigator.menuItemAbout.mnemonic=A
 Navigator.menuItemAbout.text=About
 Navigator.menuItemPaste.mnemonic_2=V
-Navigator.menuItemPaste.text=Paste (Ctrl-V)
+Navigator.menuItemPaste.text=Paste
 Navigator.menuItemOpen.mnemonic=O
 Navigator.menuItemOpen.text=Open
 Navigator.menuItemNew.mnemonic=N
@@ -80,16 +84,27 @@ Navigator.menuItemSave.mnemonic=S
 Navigator.menuItemSave.text=Save
 Navigator.menuItemSaveAll.mnemonic=A
 Navigator.menuItemSaveAll.text=Save All
+Navigator.menuItemSaveLayout.mnemonic=S
+Navigator.menuItemSaveLayout.mnemonic_2=S
+Navigator.menuItemSaveLayout.mnemonic_3=L
+Navigator.menuItemSaveLayout.text_2=Save Layout
 Navigator.menuItemAddBookmark.mnemonic=A
-Navigator.menuItemAddBookmark.text=Add
+Navigator.menuItemAddBookmark.text=Add current location
 Navigator.menuItemFileQuit.mnemonic=Q
 Navigator.menuItemFileQuit.text=Quit
-Navigator.panelSystemOne.tab.title=Publisher
-Navigator.panelSystemTwo.tab.title=Subscriber
-Navigator.panelCollectionOne.tab.title=Collection
-Navigator.panelCollectionTwo.tab.title=Collection
-Navigator.panelProfiles.tab.title=Profiles
-Navigator.panelKeys.tab.title=Keys
-Navigator.scrollPaneProperties.tab.title=Properties
+Navigator.panelCollectionOne.tab.mnemonic=1
+Navigator.panelCollectionOne.tab.title=Collection 1
+Navigator.panelCollectionTwo.tab.mnemonic_2=3
+Navigator.panelCollectionTwo.tab.title=Collection 3
+Navigator.panelLibraries.tab.mnemonic=I
+Navigator.panelSystemOne.tab.mnemonic=2
+Navigator.panelSystemOne.tab.title=Publisher 2
+Navigator.panelSystemTwo.tab.mnemonic=4
+Navigator.panelSystemTwo.tab.title=Subscriber 4
+Navigator.scrollPaneLog.tab.mnemonic=L
 Navigator.scrollPaneLog.tab.title=Log
+Navigator.scrollPaneProperties.tab.mnemonic=P
+Navigator.scrollPaneProperties.tab.title=Properties
+Navigator.splitPaneBackup.tab.mnemonic=A
 Navigator.splitPaneBackup.tab.title=BackUp
+Navigator.splitPaneBrowser.tab.mnemonic=R
