Progress on actual transfers and changes to trees and tables

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -37,7 +37,7 @@ Navigator.menuItemFind.text=Find
 Navigator.menuItemRefresh.mnemonic=R
 Navigator.menuItemRefresh.text=Refresh
 Navigator.menuItemShowHidden.mnemonic=H
-Navigator.menuItemShowHidden.text=Toggle Show Hidden
+Navigator.menuItemShowHidden.text=Show Hidden
 Navigator.menuItemPlexGenerator.mnemonic=P
 Navigator.menuItemPlexGenerator.text=Plex Profile Generator
 Navigator.menuItemGitHubProject.mnemonic=G
