Adding menu items and keys

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -10,7 +10,6 @@ Navigator.buttonMove.toolTipText=Move selected items
 Navigator.buttonRename.toolTipText=Rename selected items
 Navigator.buttonDelete.toolTipText=Delete selected items
 Navigator.buttonCopy.text=Copy
-Navigator.buttonCreate.text=Create
 Navigator.buttonCopy.toolTipText=Copy selected items
 Navigator.buttonForward.toolTipText=Forward (Alt-Right)
 Navigator.labelStatusLeft.text=Status Left
@@ -31,6 +30,12 @@ Navigator.menuRunSubMenu.mnemonic=R
 Navigator.menuRunSubMenu.text=Run
 Navigator.menuFile.mnemonic=F
 Navigator.menuFile.text=File
+Navigator.menuItemNewFolder.mnemonic_2=N
+Navigator.menuItemNewFolder.text=New Folder
+Navigator.menuItemRename.mnemonic=R
+Navigator.menuItemRename.text=Rename
+Navigator.menuItemDelete.mnemonic=D
+Navigator.menuItemDelete.text=Delete
 Navigator.menuItemSaveLayout.text=Save Layout
 Navigator.menuItemFind.mnemonic=F
 Navigator.menuItemFind.text=Find
@@ -56,8 +61,8 @@ Navigator.menuItemUuidGenerator.mnemonic_2=G
 Navigator.menuItemUuidGenerator.text=Generate UUID
 Navigator.menuItemExternalTools.mnemonic_2=E
 Navigator.menuItemExternalTools.text=External Tools
-Navigator.menuItemPreferences.mnemonic_2=P
-Navigator.menuItemPreferences.text=Preferences
+Navigator.menuItemSettings.mnemonic_2=S
+Navigator.menuItemSettings.text=Settings
 Navigator.menuItemMaximize.mnemonic=X
 Navigator.menuItemMaximize.text=Maximize
 Navigator.menuItemMinimize.mnemonic_2=N
@@ -68,13 +73,13 @@ Navigator.menuItemSplitHorizontal.mnemonic=H
 Navigator.menuItemSplitHorizontal.text=Split Browser Horizontally
 Navigator.menuItemSplitVertical.mnemonic=V
 Navigator.menuItemSplitVertical.text=Split Browser Vertically
-Navigator.menuItemCut.mnemonic_2=X
+Navigator.menuItemCut.mnemonic=U
 Navigator.menuItemCut.text=Cut
 Navigator.menuItemDocumentation.mnemonic=D
 Navigator.menuItemDocumentation.text=Documentation
 Navigator.menuItemAbout.mnemonic=A
 Navigator.menuItemAbout.text=About
-Navigator.menuItemPaste.mnemonic_2=V
+Navigator.menuItemPaste.mnemonic=P
 Navigator.menuItemPaste.text=Paste
 Navigator.menuItemOpen.mnemonic=O
 Navigator.menuItemOpen.text=Open
