Core Browser functionality complete

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -2,18 +2,13 @@
 # Default
 #
 
+Navigator.buttonNewFolder.mnemonic=N
 Navigator.buttonBack.toolTipText=Back (Alt-Left)
-Navigator.buttonDelete.text=Delete
-Navigator.buttonRename.text=Rename
-Navigator.buttonMove.text=Move
-Navigator.buttonMove.toolTipText=Move selected items
-Navigator.buttonRename.toolTipText=Rename selected items
-Navigator.buttonDelete.toolTipText=Delete selected items
-Navigator.buttonCopy.text=Copy
-Navigator.buttonCopy.toolTipText=Copy selected items
 Navigator.buttonForward.toolTipText=Forward (Alt-Right)
 Navigator.labelStatusLeft.text=Status Left
 Navigator.labelStatusRight.text=Status Right
+Navigator.menuJobs.mnemonic=J
+Navigator.menuJobs.text=Jobs
 Navigator.menuView.mnemonic=V
 Navigator.menuView.text=View
 Navigator.menuEdit.mnemonic=E
@@ -26,41 +21,63 @@ Navigator.menuWindows.mnemonic=W
 Navigator.menuWindows.text=Window
 Navigator.menuHelp.mnemonic=H
 Navigator.menuHelp.text=Help
-Navigator.menuRunSubMenu.mnemonic=R
-Navigator.menuRunSubMenu.text=Run
 Navigator.menuFile.mnemonic=F
 Navigator.menuFile.text=File
+Navigator.popupMenuItemFind.mnemonic=F
+Navigator.popupMenuItemFind.text=Find ...
+Navigator.popupMenuItemNewFolder.mnemonic=N
+Navigator.popupMenuItemNewFolder.text=New Folder ...
+Navigator.popupMenuItemRename.mnemonic=R
+Navigator.popupMenuItemRename.text=Rename ...
+Navigator.popupMenuItemTouch.mnemonic=T
+Navigator.popupMenuItemTouch.text=Touch Date/Time
+Navigator.popupMenuItemCopy.mnemonic=C
+Navigator.popupMenuItemCopy.text=Copy
+Navigator.popupMenuItemCut.mnemonic=U
+Navigator.popupMenuItemCut.text=Cut
+Navigator.popupMenuItemPaste.mnemonic=P
+Navigator.popupMenuItemPaste.text=Paste
+Navigator.popupMenuItemDelete.mnemonic=D
+Navigator.popupMenuItemDelete.text=Delete
+Navigator.popupMenuItemBottom.mnemonic=B
+Navigator.popupMenuItemBottom.text=Bottom
+Navigator.popupMenuItemClear.mnemonic=C
+Navigator.popupMenuItemClear.text=Clear
+Navigator.menuItemJobsManage.mnemonic=M
+Navigator.menuItemJobsManage.text=Manage ...
+Navigator.menuItemRenamer.mnemonic=R
+Navigator.menuItemRenamer.text=Renamer ...
+Navigator.menuItemOpenSubscriber.mnemonic=S
+Navigator.menuItemOpenSubscriber.text=Open Subscirber ...
 Navigator.menuItemNewFolder.mnemonic_2=N
-Navigator.menuItemNewFolder.text=New Folder
+Navigator.menuItemNewFolder.text=New Folder ...
 Navigator.menuItemRename.mnemonic=R
-Navigator.menuItemRename.text=Rename
+Navigator.menuItemRename.text=Rename ...
 Navigator.menuItemDelete.mnemonic=D
 Navigator.menuItemDelete.text=Delete
 Navigator.menuItemSaveLayout.text=Save Layout
 Navigator.menuItemFind.mnemonic=F
-Navigator.menuItemFind.text=Find
+Navigator.menuItemFind.text=Find ...
 Navigator.menuItemRefresh.mnemonic=R
 Navigator.menuItemRefresh.text=Refresh
 Navigator.menuItemShowHidden.mnemonic=H
 Navigator.menuItemShowHidden.text=Show Hidden
 Navigator.menuItemPlexGenerator.mnemonic=P
-Navigator.menuItemPlexGenerator.text=Plex Profile Generator
+Navigator.menuItemPlexGenerator.text=Plex Profile Generator ...
 Navigator.menuItemGitHubProject.mnemonic=G
 Navigator.menuItemGitHubProject.text=GitHub Project
 Navigator.menuItemTouch.mnemonic=T
 Navigator.menuItemTouch.text=Touch Date/Time
 Navigator.menuItemJunk.mnemonic=J
-Navigator.menuItemJunk.text=Junk Removal
-Navigator.menuItemDuplicates.mnemonic=F
-Navigator.menuItemDuplicates.text=Find Duplicates
+Navigator.menuItemJunk.text=Junk Remover ...
+Navigator.menuItemDuplicates.mnemonic_2=D
+Navigator.menuItemDuplicates.text=Duplicate Finder ...
 Navigator.menuItemCopy.mnemonic=C
 Navigator.menuItemCopy.text=Copy
-Navigator.menuItemShowAllBookmarks.mnemonic=S
-Navigator.menuItemShowAllBookmarks.text=Show All
-Navigator.menuItemUuidGenerator.mnemonic_2=G
-Navigator.menuItemUuidGenerator.text=Generate UUID
+Navigator.menuItemBookmarksManage.mnemonic_2=M
+Navigator.menuItemBookmarksManage.text=Manage ...
 Navigator.menuItemExternalTools.mnemonic_2=E
-Navigator.menuItemExternalTools.text=External Tools
+Navigator.menuItemExternalTools.text=External Tools ...
 Navigator.menuItemSettings.mnemonic_2=S
 Navigator.menuItemSettings.text=Settings
 Navigator.menuItemMaximize.mnemonic=X
@@ -81,14 +98,8 @@ Navigator.menuItemAbout.mnemonic=A
 Navigator.menuItemAbout.text=About
 Navigator.menuItemPaste.mnemonic=P
 Navigator.menuItemPaste.text=Paste
-Navigator.menuItemOpen.mnemonic=O
-Navigator.menuItemOpen.text=Open
-Navigator.menuItemNew.mnemonic=N
-Navigator.menuItemNew.text=New
-Navigator.menuItemSave.mnemonic=S
-Navigator.menuItemSave.text=Save
-Navigator.menuItemSaveAll.mnemonic=A
-Navigator.menuItemSaveAll.text=Save All
+Navigator.menuItemOpenPublisher.mnemonic_2=P
+Navigator.menuItemOpenPublisher.text=Open Publisher ...
 Navigator.menuItemSaveLayout.mnemonic=S
 Navigator.menuItemSaveLayout.mnemonic_2=S
 Navigator.menuItemSaveLayout.mnemonic_3=L
