Adjusted tab key and Properties handling

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -2,6 +2,7 @@
 # Default
 #
 
+NavHelp.okButton.text=OK
 Navigator.buttonNewFolder.mnemonic=N
 Navigator.buttonBack.toolTipText=Back (Alt-Left)
 Navigator.buttonForward.toolTipText=Forward (Alt-Right)
@@ -43,6 +44,8 @@ Navigator.popupMenuItemBottom.mnemonic=B
 Navigator.popupMenuItemBottom.text=Bottom
 Navigator.popupMenuItemClear.mnemonic=C
 Navigator.popupMenuItemClear.text=Clear
+Navigator.menuItemControls.mnemonic=C
+Navigator.menuItemControls.text=Controls
 Navigator.menuItemJobsManage.mnemonic=M
 Navigator.menuItemJobsManage.text=Manage ...
 Navigator.menuItemRenamer.mnemonic=R
