Implemented File, Open Publisher and Subscriber

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -1,116 +1,97 @@
 #
 # Default
 #
-
+NavHelp.okButton.mnemonic=O
 NavHelp.okButton.text=OK
-Navigator.buttonNewFolder.mnemonic=N
 Navigator.buttonBack.toolTipText=Back (Alt-Left)
 Navigator.buttonForward.toolTipText=Forward (Alt-Right)
+Navigator.buttonHintTracking.mnemonic=K
+Navigator.buttonHintTracking.text=Hint Tracking
+Navigator.buttonJobs.text=Jobs ...
+Navigator.buttonNewFolder.mnemonic=N
+Navigator.buttonRun.text=Run
 Navigator.labelStatusLeft.text=Status Left
 Navigator.labelStatusRight.text=Status Right
-Navigator.menuJobs.mnemonic=J
-Navigator.menuJobs.text=Jobs
-Navigator.menuView.mnemonic=V
-Navigator.menuView.text=View
-Navigator.menuEdit.mnemonic=E
-Navigator.menuEdit.text=Edit
 Navigator.menuBookmarks.mnemonic=B
 Navigator.menuBookmarks.text=Bookmarks
-Navigator.menuTools.mnemonic=T
-Navigator.menuTools.text=Tools
-Navigator.menuWindows.mnemonic=W
-Navigator.menuWindows.text=Window
-Navigator.menuHelp.mnemonic=H
-Navigator.menuHelp.text=Help
+Navigator.menuEdit.mnemonic=E
+Navigator.menuEdit.text=Edit
 Navigator.menuFile.mnemonic=F
 Navigator.menuFile.text=File
-Navigator.popupMenuItemFind.mnemonic=F
-Navigator.popupMenuItemFind.text=Find ...
-Navigator.popupMenuItemNewFolder.mnemonic=N
-Navigator.popupMenuItemNewFolder.text=New Folder ...
-Navigator.popupMenuItemRename.mnemonic=R
-Navigator.popupMenuItemRename.text=Rename ...
-Navigator.popupMenuItemTouch.mnemonic=T
-Navigator.popupMenuItemTouch.text=Touch Date/Time
-Navigator.popupMenuItemCopy.mnemonic=C
-Navigator.popupMenuItemCopy.text=Copy
-Navigator.popupMenuItemCut.mnemonic=U
-Navigator.popupMenuItemCut.text=Cut
-Navigator.popupMenuItemPaste.mnemonic=P
-Navigator.popupMenuItemPaste.text=Paste
-Navigator.popupMenuItemDelete.mnemonic=D
-Navigator.popupMenuItemDelete.text=Delete
-Navigator.popupMenuItemBottom.mnemonic=B
-Navigator.popupMenuItemBottom.text=Bottom
-Navigator.popupMenuItemClear.mnemonic=C
-Navigator.popupMenuItemClear.text=Clear
-Navigator.menuItemControls.mnemonic=C
-Navigator.menuItemControls.text=Controls
-Navigator.menuItemJobsManage.mnemonic=M
-Navigator.menuItemJobsManage.text=Manage ...
-Navigator.menuItemRenamer.mnemonic=R
-Navigator.menuItemRenamer.text=Renamer ...
-Navigator.menuItemOpenSubscriber.mnemonic=S
-Navigator.menuItemOpenSubscriber.text=Open Subscirber ...
-Navigator.menuItemNewFolder.mnemonic_2=N
-Navigator.menuItemNewFolder.text=New Folder ...
-Navigator.menuItemRename.mnemonic=R
-Navigator.menuItemRename.text=Rename ...
-Navigator.menuItemDelete.mnemonic=D
-Navigator.menuItemDelete.text=Delete
-Navigator.menuItemSaveLayout.text=Save Layout
-Navigator.menuItemFind.mnemonic=F
-Navigator.menuItemFind.text=Find ...
-Navigator.menuItemRefresh.mnemonic=R
-Navigator.menuItemRefresh.text=Refresh
-Navigator.menuItemShowHidden.mnemonic=H
-Navigator.menuItemShowHidden.text=Show Hidden
-Navigator.menuItemPlexGenerator.mnemonic=P
-Navigator.menuItemPlexGenerator.text=Plex Profile Generator ...
-Navigator.menuItemGitHubProject.mnemonic=G
-Navigator.menuItemGitHubProject.text=GitHub Project
-Navigator.menuItemTouch.mnemonic=T
-Navigator.menuItemTouch.text=Touch Date/Time
-Navigator.menuItemJunk.mnemonic=J
-Navigator.menuItemJunk.text=Junk Remover ...
-Navigator.menuItemDuplicates.mnemonic_2=D
-Navigator.menuItemDuplicates.text=Duplicate Finder ...
-Navigator.menuItemCopy.mnemonic=C
-Navigator.menuItemCopy.text=Copy
+Navigator.menuHelp.mnemonic=H
+Navigator.menuHelp.text=Help
+Navigator.menuItemAbout.mnemonic=A
+Navigator.menuItemAbout.text=About
+Navigator.menuItemAddBookmark.mnemonic=A
+Navigator.menuItemAddBookmark.text=Add current location
 Navigator.menuItemBookmarksManage.mnemonic_2=M
 Navigator.menuItemBookmarksManage.text=Manage ...
+Navigator.menuItemControls.mnemonic=C
+Navigator.menuItemControls.text=Controls
+Navigator.menuItemCopy.mnemonic=C
+Navigator.menuItemCopy.text=Copy
+Navigator.menuItemCut.mnemonic=U
+Navigator.menuItemCut.text=Cut
+Navigator.menuItemDelete.mnemonic=D
+Navigator.menuItemDelete.text=Delete
+Navigator.menuItemDocumentation.mnemonic=D
+Navigator.menuItemDocumentation.text=Documentation
+Navigator.menuItemDuplicates.mnemonic_2=D
+Navigator.menuItemDuplicates.text=Duplicate Finder ...
 Navigator.menuItemExternalTools.mnemonic_2=E
 Navigator.menuItemExternalTools.text=External Tools ...
-Navigator.menuItemSettings.mnemonic_2=S
-Navigator.menuItemSettings.text=Settings
+Navigator.menuItemFileQuit.mnemonic=Q
+Navigator.menuItemFileQuit.text=Quit
+Navigator.menuItemFind.mnemonic=F
+Navigator.menuItemFind.text=Find ...
+Navigator.menuItemGitHubProject.mnemonic=G
+Navigator.menuItemGitHubProject.text=GitHub Project
+Navigator.menuItemJobsManage.mnemonic=M
+Navigator.menuItemJobsManage.text=Manage ...
+Navigator.menuItemJunk.mnemonic=J
+Navigator.menuItemJunk.text=Junk Remover ...
 Navigator.menuItemMaximize.mnemonic=X
 Navigator.menuItemMaximize.text=Maximize
 Navigator.menuItemMinimize.mnemonic_2=N
 Navigator.menuItemMinimize.text=Minimize
+Navigator.menuItemNewFolder.mnemonic_2=N
+Navigator.menuItemNewFolder.text=New Folder ...
+Navigator.menuItemOpenPublisher.mnemonic_2=P
+Navigator.menuItemOpenPublisher.text=Open Publisher ...
+Navigator.menuItemOpenSubscriber.mnemonic=S
+Navigator.menuItemOpenSubscriber.text=Open Subscriber ...
+Navigator.menuItemPaste.mnemonic=P
+Navigator.menuItemPaste.text=Paste
+Navigator.menuItemPlexGenerator.mnemonic=P
+Navigator.menuItemPlexGenerator.text=Plex Profile Generator ...
+Navigator.menuItemRefresh.mnemonic=R
+Navigator.menuItemRefresh.text=Refresh
+Navigator.menuItemRename.mnemonic=R
+Navigator.menuItemRename.text=Rename ...
+Navigator.menuItemRenamer.mnemonic=R
+Navigator.menuItemRenamer.text=Renamer ...
 Navigator.menuItemRestore.mnemonic_2=R
 Navigator.menuItemRestore.text=Restore
+Navigator.menuItemSaveLayout.mnemonic_3=L
+Navigator.menuItemSaveLayout.text=Save Layout
+Navigator.menuItemSettings.mnemonic_2=S
+Navigator.menuItemSettings.text=Settings
+Navigator.menuItemShowHidden.mnemonic=H
+Navigator.menuItemShowHidden.text=Show Hidden
 Navigator.menuItemSplitHorizontal.mnemonic=H
 Navigator.menuItemSplitHorizontal.text=Split Browser Horizontally
 Navigator.menuItemSplitVertical.mnemonic=V
 Navigator.menuItemSplitVertical.text=Split Browser Vertically
-Navigator.menuItemCut.mnemonic=U
-Navigator.menuItemCut.text=Cut
-Navigator.menuItemDocumentation.mnemonic=D
-Navigator.menuItemDocumentation.text=Documentation
-Navigator.menuItemAbout.mnemonic=A
-Navigator.menuItemAbout.text=About
-Navigator.menuItemPaste.mnemonic=P
-Navigator.menuItemPaste.text=Paste
-Navigator.menuItemOpenPublisher.mnemonic_2=P
-Navigator.menuItemOpenPublisher.text=Open Publisher ...
-Navigator.menuItemSaveLayout.mnemonic=S
-Navigator.menuItemSaveLayout.mnemonic_2=S
-Navigator.menuItemSaveLayout.mnemonic_3=L
-Navigator.menuItemSaveLayout.text_2=Save Layout
-Navigator.menuItemAddBookmark.mnemonic=A
-Navigator.menuItemAddBookmark.text=Add current location
-Navigator.menuItemFileQuit.mnemonic=Q
-Navigator.menuItemFileQuit.text=Quit
+Navigator.menuItemTouch.mnemonic=T
+Navigator.menuItemTouch.text=Touch Date/Time
+Navigator.menuJobs.mnemonic=J
+Navigator.menuJobs.text=Jobs
+Navigator.menuTools.mnemonic=T
+Navigator.menuTools.text=Tools
+Navigator.menuView.mnemonic=V
+Navigator.menuView.text=View
+Navigator.menuWindows.mnemonic=W
+Navigator.menuWindows.text=Window
 Navigator.panelCollectionOne.tab.mnemonic=1
 Navigator.panelCollectionOne.tab.title=Collection 1
 Navigator.panelCollectionTwo.tab.mnemonic_2=3
@@ -120,6 +101,26 @@ Navigator.panelSystemOne.tab.mnemonic=2
 Navigator.panelSystemOne.tab.title=Publisher 2
 Navigator.panelSystemTwo.tab.mnemonic=4
 Navigator.panelSystemTwo.tab.title=Subscriber 4
+Navigator.popupMenuItemBottom.mnemonic=B
+Navigator.popupMenuItemBottom.text=Bottom
+Navigator.popupMenuItemClear.mnemonic=C
+Navigator.popupMenuItemClear.text=Clear
+Navigator.popupMenuItemCopy.mnemonic=C
+Navigator.popupMenuItemCopy.text=Copy
+Navigator.popupMenuItemCut.mnemonic=U
+Navigator.popupMenuItemCut.text=Cut
+Navigator.popupMenuItemDelete.mnemonic=D
+Navigator.popupMenuItemDelete.text=Delete
+Navigator.popupMenuItemFind.mnemonic=F
+Navigator.popupMenuItemFind.text=Find ...
+Navigator.popupMenuItemNewFolder.mnemonic=N
+Navigator.popupMenuItemNewFolder.text=New Folder ...
+Navigator.popupMenuItemPaste.mnemonic=P
+Navigator.popupMenuItemPaste.text=Paste
+Navigator.popupMenuItemRename.mnemonic=R
+Navigator.popupMenuItemRename.text=Rename ...
+Navigator.popupMenuItemTouch.mnemonic=T
+Navigator.popupMenuItemTouch.text=Touch Date/Time
 Navigator.scrollPaneLog.tab.mnemonic=L
 Navigator.scrollPaneLog.tab.title=Log
 Navigator.scrollPaneProperties.tab.mnemonic=P
