Progress on Hint Tracking of actions

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -20,6 +20,12 @@ Navigator.menuFile.mnemonic=F
 Navigator.menuFile.text=File
 Navigator.menuHelp.mnemonic=H
 Navigator.menuHelp.text=Help
+Navigator.menuItemQuitTerminate.mnemonic=X
+Navigator.menuItemQuitTerminate.text=Quit & Exit Remote
+Navigator.menuItemOpenHintServer.mnemonic=H
+Navigator.menuItemOpenHintServer.text=Open Hint Server ...
+Navigator.menuItemOpenKeys.mnemonic=K
+Navigator.menuItemOpenKeys.text=Open Hint Keys ...
 Navigator.menuItemAbout.mnemonic=A
 Navigator.menuItemAbout.text=About
 Navigator.menuItemAddBookmark.mnemonic=A
